<resources>
    <string name="app_name">Parcial-am-acn4b-catero-moris</string>
    <string name="nombre_app">ValorantConecta</string>
    <string name="inicio_app">INICIO</string>
    <string name="modificar">Modificar</string>
    <string name="match">MATCH</string>
    <string name="formar_equipo">FORMAR EQUIPO</string>
    <string name="amigos">AMIGOS</string>
    <string name="historial">HISTORIAL</string>
    <string name="contentImg">Imágen de perfil</string>
    <string name="logoapp">Logo de la app</string>
    <string name="burguermenu">...</string>
    <string name="username">Username # TAG</string>
    <string name="rangoact">Rango Actual</string>
    <string name="rolmain">Main rol</string>
    <string name="agentmain">Agente main</string>
    <string name="historial_app">HISTORIAL DE PARTIDAS</string>
    <string name="verhistorial">VER HISTORIAL</string>
    <string name="cerrarSesion">CERRAR SESIÓN</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="volver">VOLVER</string>
</resources>
