<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/toplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/valorant_secundario"
            android:orientation="horizontal"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:contentDescription="@string/logoapp"
                android:layout_marginStart="5dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                app:srcCompat="@drawable/valo" />

            <TextView

                android:id="@+id/titulo"
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingTop="13dp"
                android:text="@string/nombre_app"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                />

            <Button
                android:id="@+id/menubtn"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/valorant_secundario"
                android:hapticFeedbackEnabled="false"
                android:text="@string/burguermenu" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/titlelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombrepantalla"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/inicio_app"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profilelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/picturelay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profilepic"
                    android:visibility="visible"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/profile"
                    android:contentDescription="@string/contentImg" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profileinfolay"
                android:layout_width="166dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/rangoact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rangoact"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/rolmain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rolmain"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/agentmain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agentmain"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/modifproflay"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/modifuser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/valorant_primario"
                    android:text="@string/modificar" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionslay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:backgroundTint="@color/valorant_primario"
                android:text="@string/match" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:backgroundTint="@color/valorant_primario"
                android:text="@string/formar_equipo" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:backgroundTint="@color/valorant_primario"
                android:text="@string/amigos" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:backgroundTint="@color/valorant_primario"
                android:text="@string/historial" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>