<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/historial"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/contenedorhistorial"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/toplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/valorant_secundario"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="338dp"
                android:layout_height="match_parent"
                android:paddingStart="65dp"
                android:paddingEnd="0dp"
                android:paddingTop="13dp"
                android:text="@string/nombre_app"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:id="@+id/menubtn"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/valorant_secundario"
                android:hapticFeedbackEnabled="false"
                android:text="@string/burguermenu" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/titlelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombrepantalla"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/historial_app"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnverpartidas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnhistorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/valorant_primario"
                android:layout_weight="1"
                android:text="@string/verhistorial"/>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>